<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iV_item_image"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_centerVertical="true"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/gray"
                android:contentDescription="@string/simple_image_view"/>

            <LinearLayout
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/iV_item_image"
                android:layout_toEndOf="@+id/iV_item_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tV_header"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/emptiness_ft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/tV_time"
                    android:layout_marginTop="5dp"
                    android:textSize="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time1"
                    android:textColor="@color/shop_text_color"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loream_lpsum"
                    android:textColor="@color/shop_text_color"/>
            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>