<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iV_view_image"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/simple_image_view"/>

    <RelativeLayout
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iV_play_icon"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/play"
            android:contentDescription="@string/simple_image_view"/>
        <RelativeLayout
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/iV_play_icon"
            android:layout_toEndOf="@+id/iV_play_icon"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tV_header"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chain_smoker_new_album"/>

            <TextView
                android:layout_below="@+id/tV_header"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ft_rihana"/>

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>